2008-07-25  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #544513

	* storage/exchange-component.c: (new_connection):
	Do not unref NULL object.

2008-07-24  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #208394 (bnc)
	* calendar/e-cal-backend-exchange.h: Include rid to check if the event
	is in the cache.
	* calendar/e-cal-backend-exchange-calendar.c: (get_changed_events):
	Use the new function, find_instance to search for the instance
	(open_calendar): 
	* calendar/e-cal-backend-exchange-tasks.c: (get_changed_tasks),
	(create_task_object):
	* calendar/e-cal-backend-exchange.c: (find_instance),
	(e_cal_backend_exchange_in_cache): Use rid along with uid while
	searching for recurring instances.					   

2008-07-23  Johnny Jacob  <jjohnny@novell.com>

	* NEWS: 2.23.5 release updates.

	* configure.in: Version bump to 2.23.6
	
2008-07-22  Bharath Acharya  <abharath@novell.com>

	** Fixes part of bug #544115

	* mail/mail-stub-exchange.c: (mse_get_folder_online_sync_updates): 
	Added a valid check to prevent the crash caused by DB Summary merge.

2008-07-21  Sankar P  <psankar@novell.com>

	Fixes Exchange related crashes due to DB Summary merge

	* camel/camel-exchange-folder.c: (search_by_expression),
	(camel_exchange_folder_construct):
	* camel/camel-exchange-search.c: (exchange_body_contains):

2008-07-16  Sankar P  <psankar@novell.com>

	Pushing changes that are necessary for disk-summary to work. 

	* camel/camel-exchange-folder.c (class_init),
	(camel_exchange_folder_construct), (exchange_sync):
	* camel/camel-exchange-summary.c (exchange_summary_class_init),
	(camel_exchange_summary_new), (summary_header_from_db),
	(summary_header_to_db), (message_info_from_db),
	(message_info_load), (message_info_to_db):

2008-06-30  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in:
	Rewrite the evolution-data-server version check and set it to
	require 2.23.5 for the new e-cal-check-timezones API.

2008-06-22  Patrick Ohly  <patrick.ohly@gmx.de>
