@@ -1,5 +1,16 @@
 2008-07-25  Milan Crha  <mcrha@redhat.com>
 
+	** Part of fix for bug #544031
+
+	* camel/camel-exchange-summary.c: (message_info_to_db):
+	* mail/mail-stub-listener.h: (struct _MailStubListener):
+	* storage/exchange-component.c: (new_connection):
+	* calendar/e-cal-backend-exchange.c: (build_msg):
+	* calendar/e-cal-backend-exchange-calendar.c: (send_objects):
+	Compiler warnings cleanup.
+
+2008-07-25  Milan Crha  <mcrha@redhat.com>
+
 	** Fix for bug #544513
 
 	* storage/exchange-component.c: (new_connection):
